@@ -7,6 +7,7 @@ NEWS
   * [ssl] fix segfault in counting renegotiations for openssl versions without TLSEXT/SNI
   * Move fdevent subsystem includes to implementation files to reduce conflicts (fixes #2373)
   * [mod_compress] fix handling if etags are disabled but cache-dir is set - may lead to double response
+  * disable mmap by default (fixes #2391)
 
 - 1.4.30 - 2011-12-18
   * Always use our 'own' md5 implementation, fixes linking issues on MacOS (fixes #2331)
